[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/themes/customization_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/Player/Customization.gd" type="Script" id=2]
[ext_resource path="res://assets/images/ui/ui_arrow.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 32, 32, 32, 32 )

[node name="Customization" type="Node2D"]
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -158.0
margin_right = 310.0
margin_bottom = 158.0
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 302.0
margin_bottom = 308.0
custom_constants/separation = 8

[node name="HBoxContainer0" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 294.0
margin_bottom = 25.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer0"]
margin_top = 4.0
margin_right = 49.0
margin_bottom = 21.0
text = "Nombre:"

[node name="NameLineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer0"]
margin_left = 57.0
margin_right = 294.0
margin_bottom = 25.0
focus_mode = 0
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 294.0
margin_bottom = 37.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 294.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 150.0
margin_bottom = 17.0
rect_min_size = Vector2( 150, 0 )
text = "Peinado:"

[node name="ChangeHairPrevBtn" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 0.415686, 0, 0.501961, 1 )
margin_left = 154.0
margin_right = 170.0
margin_bottom = 17.0
rect_min_size = Vector2( 16, 16 )
focus_mode = 0
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )
expand = true

[node name="HairLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 174.0
margin_right = 274.0
margin_bottom = 17.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 6
align = 1

[node name="ChangeHairNextBtn" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 0.415686, 0, 0.501961, 1 )
margin_left = 278.0
margin_right = 294.0
margin_bottom = 17.0
rect_min_size = Vector2( 16, 16 )
focus_mode = 0
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
expand = true
__meta__ = {
"_editor_description_": ""
}

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 294.0
margin_bottom = 74.0

[node name="HBoxContainer7" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 294.0
margin_bottom = 99.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer7"]
margin_right = 150.0
margin_bottom = 17.0
rect_min_size = Vector2( 150, 0 )
text = "Color de peinado:"

[node name="ChangeHairColorPrevBtn" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer7"]
modulate = Color( 0.415686, 0, 0.501961, 1 )
margin_left = 154.0
margin_right = 170.0
margin_bottom = 17.0
rect_min_size = Vector2( 16, 16 )
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )
expand = true
__meta__ = {
"_editor_description_": ""
}

[node name="HairColorRect" type="ColorRect" parent="PanelContainer/VBoxContainer/HBoxContainer7"]
margin_left = 214.0
margin_right = 234.0
margin_bottom = 17.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 6

[node name="ChangeHairColorNextBtn" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer7"]
modulate = Color( 0.415686, 0, 0.501961, 1 )
margin_left = 278.0
margin_right = 294.0
margin_bottom = 17.0
rect_min_size = Vector2( 16, 16 )
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
expand = true
__meta__ = {
"_editor_description_": ""
}

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 107.0
margin_right = 294.0
margin_bottom = 111.0

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 119.0
margin_right = 294.0
margin_bottom = 136.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_right = 150.0
margin_bottom = 17.0
rect_min_size = Vector2( 150, 0 )
text = "Color de piel"

[node name="ChangeSkinColorPrevBtn" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
modulate = Color( 0.415686, 0, 0.501961, 1 )
margin_left = 154.0
margin_right = 170.0
margin_bottom = 17.0
rect_min_size = Vector2( 16, 16 )
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )
expand = true
__meta__ = {
"_editor_description_": ""
}

[node name="SkinColorRect" type="ColorRect" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 214.0
margin_right = 234.0
margin_bottom = 17.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 6

[node name="ChangeSkinColorNextBtn" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
modulate = Color( 0.415686, 0, 0.501961, 1 )
margin_left = 278.0
margin_right = 294.0
margin_bottom = 17.0
rect_min_size = Vector2( 16, 16 )
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
expand = true
__meta__ = {
"_editor_description_": ""
}

[node name="HSeparator4" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 294.0
margin_bottom = 148.0

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 294.0
margin_bottom = 173.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_right = 150.0
margin_bottom = 17.0
rect_min_size = Vector2( 150, 0 )
text = "Color de playera:"

[node name="ChangeShirtPrevBtn" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
modulate = Color( 0.415686, 0, 0.501961, 1 )
margin_left = 154.0
margin_right = 170.0
margin_bottom = 17.0
rect_min_size = Vector2( 16, 16 )
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )
expand = true
__meta__ = {
"_editor_description_": ""
}

[node name="ShirtColorRect" type="ColorRect" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_left = 214.0
margin_right = 234.0
margin_bottom = 17.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 6

[node name="ChangeShirtNextBtn" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
modulate = Color( 0.415686, 0, 0.501961, 1 )
margin_left = 278.0
margin_right = 294.0
margin_bottom = 17.0
rect_min_size = Vector2( 16, 16 )
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
expand = true
__meta__ = {
"_editor_description_": ""
}

[node name="HSeparator5" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 181.0
margin_right = 294.0
margin_bottom = 185.0

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 193.0
margin_right = 294.0
margin_bottom = 210.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
margin_right = 150.0
margin_bottom = 17.0
rect_min_size = Vector2( 150, 0 )
text = "Color de pantal√≥n:"

[node name="ChangePantsPrevBtn" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
modulate = Color( 0.415686, 0, 0.501961, 1 )
margin_left = 154.0
margin_right = 170.0
margin_bottom = 17.0
rect_min_size = Vector2( 16, 16 )
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )
expand = true
__meta__ = {
"_editor_description_": ""
}

[node name="PantsColorRect" type="ColorRect" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
margin_left = 214.0
margin_right = 234.0
margin_bottom = 17.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 6

[node name="ChangePantsNextBtn" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
modulate = Color( 0.415686, 0, 0.501961, 1 )
margin_left = 278.0
margin_right = 294.0
margin_bottom = 17.0
rect_min_size = Vector2( 16, 16 )
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
expand = true
__meta__ = {
"_editor_description_": ""
}

[node name="HSeparator6" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 218.0
margin_right = 294.0
margin_bottom = 222.0

[node name="HBoxContainer5" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 230.0
margin_right = 294.0
margin_bottom = 247.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer5"]
margin_right = 150.0
margin_bottom = 17.0
rect_min_size = Vector2( 150, 0 )
text = "Color de zapatos:"

[node name="ChangeShoesPrevBtn" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer5"]
modulate = Color( 0.415686, 0, 0.501961, 1 )
margin_left = 154.0
margin_right = 170.0
margin_bottom = 17.0
rect_min_size = Vector2( 16, 16 )
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )
expand = true
__meta__ = {
"_editor_description_": ""
}

[node name="ShoesColorRect" type="ColorRect" parent="PanelContainer/VBoxContainer/HBoxContainer5"]
margin_left = 214.0
margin_right = 234.0
margin_bottom = 17.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 6

[node name="ChangeShoesNextBtn" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer5"]
modulate = Color( 0.415686, 0, 0.501961, 1 )
margin_left = 278.0
margin_right = 294.0
margin_bottom = 17.0
rect_min_size = Vector2( 16, 16 )
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
expand = true
__meta__ = {
"_editor_description_": ""
}

[node name="HSeparator7" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 255.0
margin_right = 294.0
margin_bottom = 259.0

[node name="HBoxContainer6" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 267.0
margin_right = 294.0
margin_bottom = 300.0

[node name="SaveBtn" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer6"]
margin_left = 108.0
margin_right = 186.0
margin_bottom = 33.0
focus_mode = 0
size_flags_horizontal = 6
text = "Aceptar"
